--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-scipy>=1.0.0
-numpy>=1.16.4
-fastmat>=0.1.2.post1
-scikit-learn>=0.19.1
-h5py>=2.9.0
-dispy>=4.11.0
+dispy==4.11.1
+fastmat==0.1.2.post1
+h5py==2.10.0
+joblib==0.14.1
+numpy==1.18.1
+pycos==4.8.13
+pygpc==0.2.6.post2
+scikit-learn==0.22.1
+scipy==1.4.1
+six==1.14.0
