--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
       env: CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -22,6 +23,7 @@ matrix:
       env: CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -32,6 +34,7 @@ matrix:
       env: CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -42,6 +45,7 @@ matrix:
       env: CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -59,6 +63,7 @@ matrix:
             - libomp
       script:
         - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install .
         - python3 -m unittest discover -s tests 
         - python3 -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -76,6 +81,7 @@ matrix:
             - libomp
       script:
         - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install .
         - python3 -m unittest discover -s tests 
         - python3 -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -93,6 +99,7 @@ matrix:
             - libomp
       script:
         - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install .
         - python3 -m cibuildwheel --output-dir wheelhouse
         - python3 -m unittest discover -s tests 
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -110,6 +117,7 @@ matrix:
             - libomp
       script:
         - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install .
         - python3 -m unittest discover -s tests 
         - python3 -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -121,6 +129,7 @@ matrix:
         - export CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -132,6 +141,7 @@ matrix:
         - export CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -142,6 +152,7 @@ matrix:
         - export PATH="/c/Python36:/c/Python36/Scripts:$PATH"
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
@@ -153,6 +164,7 @@ matrix:
         - export CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
       script:
         - python -m pip install cibuildwheel twine
+        - python -m pip install .
         - python -m unittest discover -s tests 
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
