--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: linux
@@ -27,6 +28,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os : linux
@@ -39,6 +41,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: linux
@@ -51,6 +54,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: osx
@@ -70,6 +74,7 @@ matrix:
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
+        - cd ..
         - python3 -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: osx
@@ -89,6 +94,7 @@ matrix:
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
+        - cd ..
         - python3 -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: osx
@@ -108,6 +114,7 @@ matrix:
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
+        - cd ..
         - python3 -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: osx
@@ -127,6 +134,7 @@ matrix:
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
+        - cd ..
         - python3 -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: windows
@@ -140,6 +148,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: windows
@@ -153,6 +162,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: windows
@@ -166,6 +176,7 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
         - ls wheelhouse/
     - os: windows
@@ -179,4 +190,6 @@ matrix:
         - python -m pip install .
         - cd tests
         - python -m unittest
+        - cd ..
         - python -m cibuildwheel --output-dir wheelhouse
+        - ls wheelhouse/
