--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       python: '3.8'
       env: CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -24,7 +24,7 @@ matrix:
       python: '3.7'
       env: CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -37,7 +37,7 @@ matrix:
       python: '3.6'
       env: CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -50,7 +50,7 @@ matrix:
       python: '3.5'
       env: CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -70,7 +70,7 @@ matrix:
             - gcc
             - libomp
       script:
-        - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install cibuildwheel twine numpy Cython
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
@@ -90,7 +90,7 @@ matrix:
             - gcc
             - libomp
       script:
-        - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install cibuildwheel twine numpy Cython
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
@@ -110,7 +110,7 @@ matrix:
             - gcc
             - libomp
       script:
-        - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install cibuildwheel twine numpy Cython
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
@@ -130,7 +130,7 @@ matrix:
             - gcc
             - libomp
       script:
-        - python3 -m pip install cibuildwheel twine
+        - python3 -m pip install cibuildwheel twine numpy Cython
         - python3 -m pip install .
         - cd tests
         - python3 -m unittest
@@ -144,7 +144,7 @@ matrix:
         - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
         - export CIBW_SKIP='cp[!3]?-* cp3[!8]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -158,7 +158,7 @@ matrix:
         - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
         - export CIBW_SKIP='cp[!3]?-* cp3[!7]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -172,7 +172,7 @@ matrix:
         - export PATH="/c/Python36:/c/Python36/Scripts:$PATH"
         - export CIBW_SKIP='cp[!3]?-* cp3[!6]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
@@ -186,7 +186,7 @@ matrix:
         - export PATH="/c/Python35:/c/Python35/Scripts:$PATH"
         - export CIBW_SKIP='cp[!3]?-* cp3[!5]-*'
       script:
-        - python -m pip install cibuildwheel twine
+        - python -m pip install cibuildwheel twine numpy Cython
         - python -m pip install .
         - cd tests
         - python -m unittest
