--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,7 +6,7 @@ sphinx:
 python:
    version: 3.7
    install:
-      - requirements: requirements.txt
+      - requirements: doc/requirements.txt
       - method: pip
         path: .
    system_packages: true
