--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,60 @@
-stages:
-  - test
+# This file is a template, and might need editing before it works on your project.
+# Official language image. Look for the different tagged releases at:
+# https://hub.docker.com/r/library/python/tags/
+image: python:latest
+
+# Change pip's cache directory to be inside the project directory since we can
+# only cache local items.
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+
+# Pip's cache doesn't store the python packages
+# https://pip.pypa.io/en/stable/reference/pip_install/#caching
+#
+# If you want to also cache the installed packages, you have to install
+# them in a virtualenv and cache it as well.
+cache:
+  paths:
+    - .cache/pip
+    - venv/
+
+before_script:
+  script:
+    - python -V  # Print out python version for debugging
+    - pip install virtualenv
+    - virtualenv venv
+    - source venv/bin/activate
+    - pip install numpy Cython
+  only:
+    - master
+    - stable
 
 test:
-  stage: test
   script:
-  - apt-get update -qy
-  - apt-get install -y python-dev python-pip
-  - python -m pip install cibuildwheel twine numpy Cython
-  - cd tests
-  - python -m unittest 
+    - python setup.py install 
+    - cd tests ; python -m unittest
+  only:
+    - master
+    - stable
+
+# run:
+  # script:
+    # - python setup.py bdist_wheel
+    # an alternative approach is to install and run:
+    # - pip install dist/*
+    # run the command here
+  # artifacts:
+    # paths:
+      # - dist/*.whl
+
+pages:
+  script:
+    - pip install sphinx sphinx-rtd-theme sphinx-gallery 
+    - cd doc ; make html
+    - mv build/html/ ../public/
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
+    - stable
