--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ before_script:
   - pip install virtualenv
   - virtualenv venv
   - source venv/bin/activate
-  - pip install numpy Cython
+  - pip install numpy Cython matplotlib seaborn
 
 test:
   script:
@@ -45,6 +45,8 @@ test:
 
 pages:
   script:
+    - pip install numpy Cython
+    - python setup.py install
     - pip install sphinx sphinx-rtd-theme sphinx-gallery 
     - cd doc ; make html
     - mv build/html/ ../public/
