--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -10,13 +10,11 @@ on:
     branches: [ master, stable ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install .
     - name: Test with unittest
       run: |
         cd tests
