--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,8 +1,7 @@
-fastmat==0.1.2.post1
-h5py==2.10.0
-joblib==0.14.1
-numpy==1.18.1
-scikit-learn==0.22.1
-scipy==1.4.1
-six==1.14.0
-sphinx-gallery==0.5.0
+scipy>=1.4.1
+fastmat>=0.1.2.post1
+h5py>=2.10.0
+scikit-learn>=0.22.1
+seaborn>=0.9.0
+matplotlib>=3.0.0
+sphinx-gallery>=0.5.0
