--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python package
+name: Unittest 
 
 on:
   push:
@@ -10,7 +7,7 @@ on:
     branches: [ master, stable ]
 
 jobs:
-  test:
+  test_ubuntu:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -31,3 +28,44 @@ jobs:
         cd tests
         python -m unittest
 
+  test_windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.5, 3.6, 3.7, 3.8]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install .
+    - name: Test with unittest
+      run: |
+        cd tests
+        python -m unittest
+
+  test_macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.5, 3.6, 3.7, 3.8]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install .
+    - name: Test with unittest
+      run: |
+        cd tests
+        python -m unittest
