--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -64,8 +64,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Set up system
       run: |
-        export CC=gcc
-        export CXX=g++
+        export CC=gcc-9
+        export CXX=g++-9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
