--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -62,16 +62,12 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set up system
-      run: |
-        export CC=gcc-9
-        export CXX=g++-9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install Cython matplotlib seaborn
         pip install -r requirements.txt
-        pip install .
+        CC=gcc-9 CXX=g++-9 pip install .
     - name: Test with unittest
       run: |
         cd tests
